--- a/map.html
+++ b/map.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4TKawJVgNVaaKOUwbg2MAcQywVSpNKRc&callback=initMap">
+</script>
+    <link rel="stylesheet" href="map.css">
+    <script src="map.js"></script>
     <title>Document</title>
 </head>
 <body>
+   
+    <div id="map"></div>
     
 </body>
 </html>
