--- a/populate.html
+++ b/populate.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Restaurant List</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Restaurant List</title>
+</head>
+
+<body>
+  <h1>Restaurant List</h1>
+  <ul id="restaurant-list"></ul>
+  <script src="script.js"></script>
+  <div id="categories"></div>
+
+  <div id="categories-container"></div>
+  <div>
     <h1>Restaurant List</h1>
-    <ul id="restaurant-list"></ul>
-    <script src="script.js"></script>
-  </body>
+    <div id="categories"></div>
+    <div id="restaurantList"></div>
+  </div>
+</body>
+<script src="script.js"></script>
+<script src="cats.js"></script>
+</body>
+
 </html>
