update populate and css

--- a/populate.html
+++ b/populate.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
   <title>Restaurant List</title>
 </head>
 
@@ -10,12 +11,13 @@
   <h1>Restaurant List</h1>
   <ul id="restaurant-list"></ul>
   <script src="script.js"></script>
-  <div id="categories"></div>
+  <!-- <div id="categories"></div>
 
-  <div id="categories-container"></div>
-  <div>
-    <h1>Restaurant List</h1>
-    <div id="categories"></div>
+  <div id="categories-container"></div> -->
+  <h1>Restaurant List</h1>
+  <div class=" bibli">
+
+    <div id="categories" class="categories"></div>
     <div id="restaurantList"></div>
   </div>
 </body>
