--- a/populate.html
+++ b/populate.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-  <h1>Restaurant List</h1>
+  <!--  <h1>Restaurant List</h1>
   <ul id="restaurant-list"></ul>
-  <script src="script.js"></script>
+  <script src="script.js"></script> -->
   <!-- <div id="categories"></div>
 
   <div id="categories-container"></div> -->
@@ -21,7 +21,7 @@
     <div id="restaurantList"></div>
   </div>
 </body>
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
 <script src="cats.js"></script>
 </body>
 
