--- a/populate.html
+++ b/populate.html
@@ -15,10 +15,14 @@
 
   <div id="categories-container"></div> -->
   <h1>Restaurant List</h1>
-  <div class=" bibli">
+  <div class="centerdiv">
+    <div class=" bibli">
 
-    <div id="categories" class="categories"></div>
-    <div id="restaurantList"></div>
+      <div id="categories" class="categories"></div>
+      <div id="restaurantList"></div>
+
+    </div>
+
   </div>
 </body>
 <!-- <script src="script.js"></script> -->
