--- a/populate.html
+++ b/populate.html
@@ -3,30 +3,41 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style2.css">
   <title>Restaurant List</title>
 </head>
 
 <body>
-  <!--  <h1>Restaurant List</h1>
+
+  <header>
+
+  </header>
+
+  <main>
+    <!--  <h1>Restaurant List</h1>
   <ul id="restaurant-list"></ul>
   <script src="script.js"></script> -->
-  <!-- <div id="categories"></div>
+    <!-- <div id="categories"></div>
 
   <div id="categories-container"></div> -->
-  <h1>Restaurant List</h1>
-  <div class="centerdiv">
-    <div class=" bibli">
+    <h1>Restaurant List</h1>
+    <div class="centerdiv">
+      <div class=" bibli">
 
-      <div id="categories" class="categories"></div>
-      <div id="restaurantList"></div>
+        <div id="categories" class="categories"></div>
+        <div id="restaurantList"></div>
+
+      </div>
 
     </div>
 
-  </div>
+  </main>
+
+
+
 </body>
 <!-- <script src="script.js"></script> -->
-<script src="cats.js"></script>
+<script src="cats.js" type="module"></script>
 </body>
 
 </html>
