modification css laetitia

--- a/populate.html
+++ b/populate.html
@@ -3,27 +3,37 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style1.css">
   <title>Restaurant List</title>
 </head>
 
 <body>
-  <!--  <h1>Restaurant List</h1>
+
+  <div class="food">
+    <h1>Les meilleurs restaurants sur valence pour le plaisir de vos papilles</h1>
+
+  </div>
+
+  <!--  <h1>Les meilleurs restaurants sur valence pour le plaisir de vos papilles</h1>
+  
+  <!--  <h2>Restaurant List</h2>
   <ul id="restaurant-list"></ul>
   <script src="script.js"></script> -->
   <!-- <div id="categories"></div>
 
   <div id="categories-container"></div> -->
-  <h1>Restaurant List</h1>
+  <h2>Restaurant List</h2>
   <div class="centerdiv">
     <div class=" bibli">
 
-      <div id="categories" class="categories"></div>
+      <div id="categories" class="categories">
+
+      </div>
       <div id="restaurantList"></div>
 
-    </div>
 
-  </div>
+
+
 </body>
 <!-- <script src="script.js"></script> -->
 <script src="cats.js"></script>
