--- a/populate.html
+++ b/populate.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-  <title>Restaurant List</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Les meilleurs restaturants sur valence aux plaisirs de vos papilles</title>
+    <link rel="stylesheet" href="style2.css" />
 </head>
 
 <body>
@@ -15,6 +17,7 @@
 
   <div id="categories-container"></div> -->
   <h1>Restaurant List</h1>
+  
   <div class="centerdiv">
     <div class=" bibli">
 
