--- a/populate.html
+++ b/populate.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style1.css">
   <title>Restaurant List</title>
 </head>
 
 <body>
 
-  <div class="food">
-    <h1>Les meilleurs restaurants sur valence pour le plaisir de vos papilles</h1>
+  <div class="food"> 
+    <h1 class="Titre">Wild Eat</h1>
 
   </div>
 
@@ -22,7 +22,7 @@
   <!-- <div id="categories"></div>
 
   <div id="categories-container"></div> -->
-  <h1>Restaurant List</h1>
+  <h2>Liste des Restaurants</h2>
   <div class="centerdiv">
     <div class=" bibli">
 
