--- a/populate.html
+++ b/populate.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-
+  
   <div class="food"> 
-    <h1 class="Titre">Wild Eat</h1>
+    <h1 class="Titre">Wild Eats</h1>
 
   </div>
 
