--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,10 @@
 </head>
 
 <body>
-    
+    <script src="popup.js"></script>
+    <ul class="restaurant Ul"></ul>
+    <div id="restaurantList"></div>
+
 </body>
 
 </html>
