--- a/populate.html
+++ b/populate.html
@@ -3,26 +3,25 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="style3.css">
   <title>Restaurant List</title>
 </head>
 
 <body>
 
   <div class="food">
-    <h1>Les meilleurs restaurants sur valence pour le plaisir de vos papilles</h1>
-
+    <h1>Les meilleurs restaurants sur valence</h1>
   </div>
 
-  <!--  <h1>Les meilleurs restaurants sur valence pour le plaisir de vos papilles</h1>
+  <!--  <h1>Les meilleurs restaurants sur valence </h1>
   
-  <!--  <h2>Restaurant List</h2>
+  <!--  <h2>Liste des restaurants</h2>
   <ul id="restaurant-list"></ul>
   <script src="script.js"></script> -->
   <!-- <div id="categories"></div>
 
   <div id="categories-container"></div> -->
-  <h2>Restaurant List</h2>
+  <h2>Liste des Restaurants</h2>
   <div class="centerdiv">
     <div class=" bibli">
 
