not to be saved

--- a/populate.html
+++ b/populate.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="styleLaetitia.css">
+  <link rel="stylesheet" href="style1.css">
   <title>Restaurant List</title>
 </head>
 
@@ -30,6 +30,8 @@
 
       </div>
       <div id="restaurantList"></div>
+
+      <div>details</div>
 
 
 
