modale windows faite

--- a/populate.html
+++ b/populate.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style1.css">
+
   <title>Restaurant List</title>
 </head>
 
@@ -16,7 +17,7 @@
 
   <!--  <h1>Les meilleurs restaurants sur valence pour le plaisir de vos papilles</h1>
   
-  <!--  <h2>Restaurant List</h2>
+   <h2>Restaurant List</h2>
   <ul id="restaurant-list"></ul>
   <script src="script.js"></script> -->
   <!-- <div id="categories"></div>
