site presque fini V1.0

--- a/populate.html
+++ b/populate.html
@@ -5,34 +5,33 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style1.css">
   <script src="cats.js"></script>
-
   <title>Restaurant List</title>
 </head>
 
 <body>
-
   <div class="food">
     <h1 class="Titre">WILD EATS</h1>
-
   </div>
-
   </div>
-
-
-
   <div id="categories-container"></div>
+  <div>
+    <p>Wildeat est un annuaire de restaurants situé à Valence,<br> en France, qui est devenu rapidement une référence
+      pour
+      les habitants et les touristes <br> en quête de délicieuses expériences culinaires.
+      Le répertoire propose une sélection rigoureuse de restaurants, <br> allant des endroits les plus populaires et les
+      plus
+      renommés aux joyaux cachés, souvent ignorés par les touristes. <br> Chaque restaurant est minutieusement examiné
+      et
+      choisi pour la qualité de ses plats,<br> son service, son ambiance et son emplacement.</p>
+  </div>
   <h2>Liste des Restaurants</h2>
+
   <div class="centerdiv">
     <div class=" bibli">
-
       <div id="categories" class="categories">
-
       </div>
-      <div id="restaurantList"></div>
-
-
-
-
+      <div id="restaurantList">
+      </div>
 </body>
 <!-- <script src="script.js"></script> -->
 <script src="cats.js" type="module"></script>
