--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style1.css">
-  <link rel="stylesheet" href="modal.css">
-  <script src="modal.js"></script>
-  <script src="cats.js"></script>
   <title>Restaurant List</title>
   <script src="cats.js" type="module"></script>
   <script src="search.js" type="module"></script>
+  
   
 </head>
 
@@ -25,7 +23,7 @@
 
   <div id="categories-container"></div>
   <div>
-    <p>Wildeat est un annuaire de restaurants situé à Valence,<br> en France, qui est devenu rapidement une référence
+    <p>Wild Eats est un annuaire de restaurants situé à Valence,<br> en France, qui est devenu rapidement une référence
       pour
       les habitants et les touristes <br> en quête de délicieuses expériences culinaires.
       Le répertoire propose une sélection rigoureuse de restaurants, <br> allant des endroits les plus populaires et les
@@ -42,7 +40,6 @@
 
       </div>
       <div id="restaurantList"></div>
-
 
 
 
